# mate

./: Cargo.toml  README.md  SKILL.md
.claude/skills/captain/: SKILL.md
.claude/skills/mate/: SKILL.md
internal/: pane.md
src/: client.rs  config.rs  discord.rs  github.rs  hash.rs  issues.rs  listing.rs  main.rs  pane.rs  paths.rs  protocol.rs  requests.rs  server.rs  tmux.rs  util.rs  warmth.rs  watch.rs
src/github/: mod.rs  tests.rs
src/main/tests/: listing.rs
tests/: pane_replay.rs
tests/fixtures/: sess-claude.cast  sess-codex.cast
xtask/src/: main.rs
