[package]
name = "bud"
version = "0.1.0"
edition = "2024"

[dependencies]
roam = { version = "7.0.0", features = ["runtime"] }
roam-stream = "7.0.0"
figue = "2.0.0"
facet = "0.44"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
