[package]
name = "mate"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
roam = { version = "7.0.0", features = ["runtime"] }
roam-stream = "7.0.0"
figue = "2.0.0"
facet = "0.44"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
notify = "7"
rust-ini = "0.21"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs-err = "3"
comfy-table = "7"

[dev-dependencies]
vt100 = "0.15"
